--- a/GDP_eDM_final_10.24.html
+++ b/GDP_eDM_final_10.24.html
@@ -3,6 +3,8 @@
 <head>
 <meta charset="utf-8">
 <title>Google Play Game on PC</title>
+	
+	
 	<style>
 		table,tr,td {
 			font-family: 'Noto Sans KR', Arial, sans-serif;
@@ -23,6 +25,9 @@
 		}
 	</style>
 </head>
+<body style="background-color: #ffffff; margin:0;">
+<div style="width: 100%; background-color: #ffffff;">
+<p style="text-align: center;">이 메일이 보이지 않거나 링크 연결이 안되는 경우 <a href="https://virtual-pico.com/GP_Invitation">여기</a>를 클릭하세요.</p>
 
 <body bgcolor="#e0e0e0" text color="#373737">
 <table bgcolor="#ffffff" align="center" border="0" cellpadding="0" cellspacing="0" style="margin:0 auto; border:1px solid #eeeeee" width="700px" height="auto" >
@@ -68,3 +73,36 @@
   <area shape="rect" coords="373,9,629,55" href="https://www.youtube.com/watch?v=U9cmDT-O_So" target="_blank">
   <area shape="rect" coords="684,10,941,55" href="https://www.youtube.com/watch?v=AvjYogIXl4w" target="_blank">
 </map>
+	</td>
+</tr> 
+
+</tbody>
+</table>
+<table style="height: 116px;" border="0" width="100%" cellspacing="0" cellpadding="0">
+<tbody>
+<tr style="height: 27px;">
+<td style="padding-top: 40px; padding-bottom: 23px; height: 27px;" align="center" valign="top"><img style="display: block; margin-left: auto; margin-right: auto;" title="Google" src="http://www.gstatic.com/news/images/google_logo_day_dream.png" alt="Google" width="86"></td>
+</tr>
+<tr style="height: 22px;">
+<td style="font-family: Roboto, Helvetica, 'Arial sans-serif'; font-size: 14px; line-height: 22px; color: #5f6368; letter-spacing: 0.25px; padding-bottom: 25px; height: 22px;" align="center" valign="top"><a style="color: #5f6368; text-decoration: none;" href="#">&copy; 2021 Google LLC 1600 Amphitheatre Parkway, Mountain View, CA 94043</a></td>
+</tr>
+<tr style="height: 67px;">
+<td style="font-family: Roboto, Helvetica, 'Arial sans-serif'; font-size: 14px; line-height: 22px; color: #5f6368; letter-spacing: 0.25px; padding-bottom: 20px; height: 67px;" align="center" valign="top">
+<p>본 메일은 귀하의 이메일 수신 동의에 따라 발송되었습니다. <br>메일 수신을 원치 않으실 경우,<strong> <a href="{{guest.unsubscribe_url}}">수신거부</a></strong>를 클릭하세요. <br>다시 수신을 원하실 경우,<strong> <a href="{{guest.subscribe_url}}">이메일 수신</a></strong>을 클릭해주시기 바랍니다.</p>
+</td>
+</tr>
+</tbody>
+</table>
+<map name="Map"> 
+<area alt="" coords="528,714,616,734" shape="rect" href="https://docs.google.com/forms/d/e/1FAIpQLSe9x0MSUFogzjN0a5ucYfwTZxg2Am4e7CO001usTv-ed1AG9w/viewform" target="_blank">
+ </map> <map name="Map2"> 
+<area coords="148,108,232,126" shape="rect" href="https://docs.google.com/forms/d/e/1FAIpQLSe9x0MSUFogzjN0a5ucYfwTZxg2Am4e7CO001usTv-ed1AG9w/viewform" target="_blank">
+ 
+<area coords="558,78,603,99" shape="rect" href="https://www.google.com/maps/place/%EA%B5%AC%EA%B8%80%EC%BD%94%EB%A6%AC%EC%95%84+%EB%B3%B8%EC%82%AC/data=!4m5!3m4!1s0x0:0xdbb2d70b1648d2ce!8m2!3d37.5000201!4d127.0364249" target="_blank">
+ </map> <map name="Map3"> 
+<area coords="48,10,310,83" shape="rect" href="https://docs.google.com/forms/d/e/1FAIpQLSe9x0MSUFogzjN0a5ucYfwTZxg2Am4e7CO001usTv-ed1AG9w/viewform" target="_blank">
+ </map>
+<p>&nbsp;</p>
+</div>
+</body>
+</html>
